--- a/src/components/App/components/Profile/View.module.scss
+++ b/src/components/App/components/Profile/View.module.scss
@@ -79,7 +79,7 @@
 
 .down {
   position: absolute;
-  bottom: 48px;
+  bottom: 64px;
   left: calc(50% - 32px);
   display: flex;
   align-items: center;
