--- a/src/components/App/components/Project/View.module.scss
+++ b/src/components/App/components/Project/View.module.scss
@@ -16,6 +16,6 @@
 
 .end {
   text-align: center;
-  margin: 0;
+  margin: 32px 0 0;
   color: var(--dim);
 }
